samples/_failures_safe/1761040017_197c42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cb37092.c: In function ‘process_event’:
./samples/SAFE/__tmp_4cb37092.c:176:31: error: expected ‘;’ at end of input
  176 |                 handle_reading
      |                               ^
      |                               ;
./samples/SAFE/__tmp_4cb37092.c:176:17: error: expected declaration or statement at end of input
  176 |                 handle_reading
      |                 ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_4cb37092.c:176:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4cb37092.c:176:17: error: expected declaration or statement at end of input
